<resources>
    <string name="app_name">Ecuaciones Diferenciales</string>
    <string name="adminb">Sin red</string>
    <string name="login">Iniciar Sesión</string>
    <string name="usr">Usuario</string>
    <string name="ped">Contraseña</string>
    <string name="reg">¿No cuenta con una cuenta? Registrese aqui</string>
    <string name="reg2">Registro</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Manual de Ecuaciones Diferenciales</string>
    <string name="nav_header_subtitle">Temas</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuracion de la cuenta</string>
    <string name="ajustes">Ajustes</string>
    <string name="salir">Cerrar sesion</string>
    <string name="menu_home">Ecuacion Diferencial</string>
    <string name="menu_gallery">Orden y Grado</string>
    <string name="menu_slideshow">Sol. General y Particular</string>
    <string name="menu_tools">Primer Orden y Grado</string>
    <string name="menu_share">Anexos</string>
    <string name="menu_send">Creditos</string>
    <string name="menuquinta">Variables Separadas</string>
    <string name="menusexta">Ec. Homogeneas</string>
    <string name="Titulo_1">Ecuaciones Diferenciales</string>
    <string name="tituloOr">Ecuaciones Diferenciales ordinarias</string>
    <string name="Introduccion">Se entiende como una ecuacion en la que intervienen derivadas de una o mas funciones desconocidas</string>
    <string name="tl4">Orden de una ecuacion diferencial</string>
    <string name="tx4">El orden de la ecuacion diferencial esta dado por el orden mayor de su derivada como si indica en la variable dependiente</string>
    <string name="txtreg1">Usuario</string>
    <string name="txtreg2">Nombre(s)</string>
    <string name="txtreg3">Apellido Paterno</string>
    <string name="txtreg4">Apellido Materno</string>
    <string name="txtreg5">Contraseña</string>
    <string name="txtreg6">Confirmar Contraseña</string>
    <string name="txtreg7">Edad</string>
    <string name="txtreg8">Estudiante</string>
    <string name="txtreg9">Docente</string>
    <string name="txtreg10">Registrar!</string>
    <string name="txt_ejemplos">Ejemplo:</string>
    <string name="txt_ejercicios">Ejercicios:</string>
    <string name="txt_m1_p1_1">TEMA 1: Concepto, Orden y Grado de las Ecuaciones Diferenciales</string>
    <string name="txt_m1_p1_2">Una ecuacion diferencial es una ecuacion en la que intervienen derivadas de una o mas funciones desconocidas (variables dependientes)</string>
    <string name="txt_m1_p1_3">A la variable dependiente tambien se le llama duncion incognita(desconocida).</string>
    <string name="txt_m1_p1_4">Ecuaciones diferenciales</string>
    <string name="txt_m1_p1_5">"Se entiende por Ecuacion diferencial a cualquier ecuacion en la que intervienen una variable dependiente y sus respectivas derivadas con respecto a una o mas variables independientes. Se clasifican de acuerdo al tipo, orden y linealidad."</string>
    <string name="tl1">Ecuaciones Diferenciales Ordinarias</string>
    <string name="txt1">Aquellas que contienen derivadas respecto a una sola variable independiente y puede contener mas de una variable dependiente</string>
    <string name="tl2">Ecuaciones Diferenciales en Derivadas Parciales</string>
    <string name="txt2">Aquellas que contienen derivadas respecto a dos o mas variables independientes</string>
    <string name="tl3">Clasificación de las ecuaciones diferenciales</string>
    <string name="txt3">Se clasifican de acuerdo a su: \n\t * Tipo \n\t * Orden \n\t * Linealidad</string>
    <string name="txt_m1_p4_1">Orden de una ecuacion diferencial</string>
    <string name="txt_m1_p4_2">El orden de una ecuacion diferencial esta dado por el orden mayor de su derivada(como se indica en la variable dependiente).</string>
    <string name="txt_m1_p4_3">Grado de una ecuacion diferencial</string>
    <string name="txt_m1_p4_4">El grado de una ecuacion diferencial esta dado por el exponente del mayor orden de su derivada (es la potencia de la derivada mayor orden que aparece en la ecuacion).</string>
    <string name="txt_m1_p5_1">Ejercicios Resueltos(4):</string>
    <string name="ejercicio_t1"> determina el grado y orden de la siguiente ecuacion diferencial: </string>
    <string name="orden">Orden:</string>
    <string name="grado">Grado:</string>
    <string name="txt_m1_p6_1">Ejercicios Propuestos(5):</string>
    <string name="txt_m1_p8_1">Dada una ecuacion diferencial, encontrar su solucion general y su solucion particular</string>
    <string name="txt_m1_p8_2">Solucion de una ecuacion dinferencial</string>
    <string name="txt_m1_p8_3">Una funcion que cuando se remplaza en la ecuacion diferencial de una igualdad se llama una solucion de la ecuacion diferencial, por lo tanto, resolver una ecuacion diferencial es encontrar una funcion desconocida que al ser sustituida en la ecuacion diferencial se obtiene una igualdad.</string>
    <string name="txt_m1_p8_4">Funcion Primitiva de una Ecuacion Diferencial</string>
    <string name="txt_m1_p8_5">Es una expresion equivalente a la ecuacion diferencial que carece de derivadas.</string>
    <string name="txt_m1_p8_6">Resolver la ecuacion diferencial</string>
    <string name="txt_m1_p8_7">El objetivo es encontrar la funcion y dy = 2x dx, pasando dx para poder integrar</string>
    <string name="txt_m1_p8_8">La expresion es una "funcion primitiva" de la ecuacion diferencial.</string>
    <string name="txt_m1_p9_1">Comprobacion:</string>
    <string name="txt_m1_p9_2">Solucion encontrada: Es aquella funcion que al ser "sustituida" en la variable dependiente "y" satisface la ecuacion dada.</string>
    <string name="txt_m1_p9_3">Ecuacion diferencial dada</string>
    <string name="txt_m1_p9_4">Sustituyendo la solucion encontrada en la ecuacion diferencial dada</string>
    <string name="txt_m1_p9_5">¡Dado que se cumple la igualdad la solucion encontrada es la correcta!</string>
    <string name="txt_m1_p10_1">Soluciones de una ecuacion diferencial</string>
    <string name="txt_m1_p10_2">Tipos de soluciones</string>
    <string name="txt_m1_p10_3">Una solucions de una ecuacion diferencial es una funcion(en la que ya no aparecen derivadas ni diferenciales) que al reemplazar a la funcion incognita, en cada caso con las derivaciones correspondientes, verifica la ecuacion, es decir, la convierte en una identidad. Hay dos tipos de soluciones:</string>
    <string name="txt_m1_p10_4">1. Solucion general: </string>
    <string name="txt_m1_p10_5">una solucion de tipo generico, expresada con una o mas constantes.</string>
    <string name="txt_m1_p10_6">Es una curva. Tiene un orden de infinitud de acuerdo a su cantidad de constantes(una constante corresponde a una familia simplemente infinita, dos constantes a una familia doblemente infinita,etc). En caso de que la ecuacion sea lineal, la solucion general se logra como combinacion lineal de las soluciones (tantas como el orden de la ecuacion) de la ecuacion homogenea (que resulta de hacer el termino no dependiente de y(x) ni de sus derivadas iguale a 0) mas una solucion particular de la ecuacion completa.</string>
    <string name="txt_m1_p11_1">2. Solucion Particular:</string>
    <string name="txt_m1_p11_2">Si fijado cualquier punto P(x0,y0) por donde debe pasar necesariamente la solucion de la ecuacion diferencial, existe un unico valor de C, y por lo tanto de la intergral que satisface la ecuacion, este recibira el nombre de solucion particular de la ecuacion en el punto P(X0,Y0), que recibe el nombre de condicion inicial.</string>
    <string name="txt_m1_p11_3">¿QUE ES SOLUCION?:</string>
    <string name="txt_m1_p11_4">Una solucion de una ecucacion diferencial es una funcion que al remplazar a la funcion incognita, en cada caso con las derivaciones correspondientes, verifica la ecuacion.</string>
    <string name="txt_m1_p11_5">¿QUE ES SOLUCION GENERAL?</string>
    <string name="txt_m1_p11_6">Se llama solucion general de una ecuacion diferencial a toda relacion entre las variables, libres derivadas,que satisfacen dicha ecuacion diferencial</string>
    <string name="txt_m1_p11_7">Por lo comun, la solucion general de una ecuacion diferencial de orden n tiene n constantes. integrar o resolver una ecuacion diferencial es hallar su solucion general.</string>
    <string name="txt_m1_p11_8">¿QUE ES SOLUCION PARTICULAR?</string>
    <string name="txt_m1_p11_9">Se llama solucion particular de una ecuacion diferencial a aquella solucion que se obtiene a partir de la solucion general, dando valores a la constante.</string>
    <string name="txt_m1_p12_n"> Pasos para encontrar una solucion general o particular</string>
    <string name="txt_m1_p12_1"> Pasos para encontrar una solucion general o particular de una ecuacion diferencial dada:</string>
    <string name="txt_m1_p12_2">1) Aplicar la notacion de leibniz DY/DX a la ecuacion diferencial dada (esta notacion muestra claramente ambas variables, las dependientes y las independientes).</string>
    <string name="txt_m1_p12_3">2) Realizar el despeje expresado en el 1rt. miembro de la ecuacion diferencial en terminos unicamente de ❝Y❞ y en el segundo miembro unicamente en terminos de ❝X❞.</string>
    <string name="txt_m1_p12_4">3) Realizar la integracion ∫ dy u ∫ dx a cada miembro de la ecuacion.</string>
    <string name="txt_m1_p12_5">4) Despejar la variable ❝Y❞ cuyo resultado sera la SOLUCION GENERAL</string>
    <string name="txt_m1_p12_6">5) Sustituir los valores de ❝X❞ y de la funcion  f(x)=Y para obtener la SOLUCION PARTICULAR.</string>
    <string name="txt_m1_p13_1">Ejercicios:</string>
    <string name="txt_m1_p13_2">Instrucciones: Dadas las siguientes diferenciales obten su solucion general y comprobar dichas solucion.</string>
    <string name="txt_m1_p15_1">Ejercicio mas complejo...</string>
    <string name="txt_m1_p15_2">Dado la siguiente diferencial encontrar su: \n\t * Solucion general \n\t * Solucion particular para f(1)=9 \n\t * Comprobacion de la solucion \n\t * Representar graficamente para los valores de x: 0,1,2,3,-1,-2,-3y-5.</string>
    <string name="txt_m1_p17_1">Instrucciones: Dada la siguiente diferencial obten su solucion general y su solucion particular para y= 1/2 cuando x= 0 y realizar la comprobacion de la solucion obtenida. </string>
    <string name="txt_m1_p18_1">Instrucciones: Dada la siguiente ecuacion diferencial obtener la solucion general y realizar la comprobacion de la solucion obtenida.</string>
    <string name="txt_m1_p19_1">Dada la ecuacion diferencial: </string>
    <string name="txt_m1_p19_2">Obtener su solucion general y su solucion particular si Y= 3 cuando x= 1 y Realizar su comprobacion de la solucion obtenida.</string>
    <string name="txt_m1_p20_1">Instrucciones: De las siguientes funciones</string>
    <string name="txt_m1_p20_2">a)</string>
    <string name="txt_m1_p20_3">b)</string>
    <string name="txt_m1_p20_4">c)</string>
    <string name="txt_m1_p20_5">d)</string>
    <string name="txt_m1_p20_6">e)</string>
    <string name="txt_m1_p20_7">Determine cuales son soluciones de la ecuacion diferencial: </string>
    <string name="txt_m1_p24_1">Dada la funcion:</string>
    <string name="txt_m1_p24_2">a) Demostrar si esta es una solucion general de la ecuacion diferencia.</string>
    <string name="txt_m1_p24_3">b) Determinar el orden y grado de la ecuacion diferencial dada.</string>
    <string name="txt_m1_p35_1">Ecuaciones diferenciales ordinarias de primer orden y de primer grado</string>
    <string name="txt_m1_p35_2">Pertenece a esta clase de ecuaciones diferenciales cuatro tipo: \n\t * Ecuaciones con Variables Separables \n\t * Ecuaciones Homogeneas \n\t * Ecuaciones Lineales \n\t * Ecuaciones Exactas</string>
</resources>