<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgred"
    tools:context=".Tipossoluciones">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_tituloTemaII"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:ems="15"
                android:text="@string/txt_m1_p8_2"
                android:textAlignment="center"
                android:textColor="#580B0B"
                android:textColorHint="#7EAD0909"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ed_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:ems="15"
                android:text="@string/txt_m1_p10_2"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textColorHint="#7EAD0909"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ed_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:ems="15"
                android:text="@string/txt_m1_p10_4"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textColorHint="#7EAD0909"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ed_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:ems="15"
                android:text="@string/txt_m1_p10_3"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textColorHint="#7EAD0909"
                android:textSize="19sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/ed_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="15"
                android:text="@string/txt_m1_p10_6"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textColorHint="#7EAD0909"
                android:textSize="19sp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="204dp"
                app:srcCompat="@drawable/solg" />

            <TextView
                android:id="@+id/ed_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:ems="15"
                android:text="@string/txt_m1_p11_1"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textColorHint="#7EAD0909"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ed_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="15"
                android:text="@string/txt_m1_p10_5"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textColorHint="#7EAD0909"
                android:textSize="19sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/ed_18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="15"
                android:text="@string/txt_m1_p11_2"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textColorHint="#7EAD0909"
                android:textSize="19sp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="match_parent"
                android:layout_height="226dp"
                app:srcCompat="@drawable/ejemplo_sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#82D1F7"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ed_19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:ems="15"
                    android:text="@string/txt_m1_p11_3"
                    android:textAlignment="gravity"
                    android:textColor="#000000"
                    android:textColorHint="#7EAD0909"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ed_20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="15"
                    android:text="@string/txt_m1_p11_4"
                    android:textAlignment="gravity"
                    android:textColor="#000000"
                    android:textColorHint="#7EAD0909"
                    android:textSize="19sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/ed_21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:ems="15"
                    android:text="@string/txt_m1_p11_5"
                    android:textAlignment="gravity"
                    android:textColor="#000000"
                    android:textColorHint="#7EAD0909"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ed_22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="15"
                    android:text="@string/txt_m1_p11_6"
                    android:textAlignment="gravity"
                    android:textColor="#000000"
                    android:textColorHint="#7EAD0909"
                    android:textSize="19sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/ed_23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="15"
                    android:text="@string/txt_m1_p11_7"
                    android:textAlignment="gravity"
                    android:textColor="#000000"
                    android:textColorHint="#7EAD0909"
                    android:textSize="19sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/ed_24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:ems="15"
                    android:text="@string/txt_m1_p11_8"
                    android:textAlignment="gravity"
                    android:textColor="#000000"
                    android:textColorHint="#7EAD0909"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ed_25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="15"
                    android:text="@string/txt_m1_p11_9"
                    android:textAlignment="gravity"
                    android:textColor="#000000"
                    android:textColorHint="#7EAD0909"
                    android:textSize="19sp"
                    android:textStyle="normal" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>