<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/porregistro"
    tools:context=".registro"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_tituloEcOrd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:text="@string/reg2"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#7EAD0909"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_userr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/txtreg1"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#EC0404"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_tituloEcOrd" />

            <EditText
                android:id="@+id/et_nombres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/txtreg2"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#EC0404"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_userr" />

            <EditText
                android:id="@+id/et_ap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:ems="10"
                android:hint="@string/txtreg3"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#EC0404"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_nombres" />

            <EditText
                android:id="@+id/et_am"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:ems="10"
                android:hint="@string/txtreg4"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#EC0404"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_ap" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:ems="10"
                android:hint="@string/txtreg5"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#EC0404"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_am" />


            <EditText
                android:id="@+id/et_cpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/txtreg6"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#EC0404"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

            <EditText
                android:id="@+id/et_edad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/txtreg7"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#EC0404"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_cpassword" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_edad">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#000E0A0A"
                    android:buttonTint="#C70707"
                    android:text="@string/txtreg8"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#C70707"
                    android:text="@string/txtreg9"
                    android:textColor="#FFFFFF" />

            </RadioGroup>

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="#DAD60606"
                android:onClick="reg"
                android:text="@string/txtreg10"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toEndOf="@+id/radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/et_edad" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>